<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.ui.notes.NotesFragment">
    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/loading"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false"
        app:mpb_progressTint="@color/yellow_light"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/text_personal_message_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/notes_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="@string/notes"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/text_personal_message_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="Personal messages to you"
            android:textColor="@color/black"/>
    </LinearLayout>

        <RelativeLayout
            android:id="@+id/invite_layout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_personal_message_layout">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/invites_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/picture"
                        android:scaleType="centerCrop"
                        android:src="@drawable/baseline_profile" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginBottom="32dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/invites_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="22sp"
                            android:textColor="@color/white"
                            tools:text="Meena, 23"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:text="@string/tap_notes"/>
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/premium_member_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/invite_layout"
        android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:text="@string/interested_in_you"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="33dp"
                    android:textSize="15sp"
                    android:text="@string/premium_member_label"/>
            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/phone_number_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center"
                app:cornerRadius="20dp"
                android:text="Upgrade"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:backgroundTint="@color/yellow_light"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/likes_layout"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/premium_member_layout"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="1dp"
                android:layout_margin="4dp"
                app:cardUseCompatPadding="true">
            <ImageView
                android:id="@+id/likes_image1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_profile"
                android:scaleType="centerCrop"
                android:contentDescription="@string/picture"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cardCornerRadius="12dp"
                app:cardElevation="1dp"
                android:layout_margin="4dp"
                app:cardUseCompatPadding="true">
            <ImageView
                android:id="@+id/likes_image2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/baseline_profile"
                android:scaleType="centerCrop"
                android:contentDescription="@string/picture"/>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>